updates from formidable birthday gig

--- a/example/client/index.html
+++ b/example/client/index.html
@@ -9,7 +9,8 @@
         box-sizing: border-box;
       }
       body {
-        font: 13px Helvetica, Arial;
+        font: 62px Helvetica, Arial;
+        text-align: center;
       }
       form {
         background: #000;
@@ -41,12 +42,17 @@
       #messages li:nth-child(odd) {
         background: #eee;
       }
+      button {
+        width: 100%;
+        font-size: 62px;
+      }
     </style>
   </head>
   <body>
     <ul id="messages"></ul>
     <h1 id="number"></h1>
     <button id="increment">Increment</button>
+    <button id="deploy">Deploy</button>
     <script src="./index.js"></script>
   </body>
 </html>
