--- a/controls/client/index.html
+++ b/controls/client/index.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    />
+/>
     <style>
       * {
         margin: 0;
@@ -31,11 +31,16 @@
   <body>
     <h1>New Game</h1>
     <div class="buttonContainer">
-      <button id="left">Left</button>
-      <button id="right">Right</button>
+      <button id="up">Up</button>
     </div>
     <div class="buttonContainer">
-      <button id="fire">Fire</button>
+      <button id="left">Left</button>
+      <button id="right">Right</button>
+
+    </div>
+
+    <div class="buttonContainer">
+      <button id="down">Down</button>
     </div>
     <script src="./index.js"></script>
   </body>
