--- a/controls/index.html
+++ b/controls/index.html
@@ -42,6 +42,6 @@
     <div class="buttonContainer">
       <button id="down">Down</button>
     </div>
-    <script src="./index.js"></script>
+    <script type="module" src="client.js"></script>
   </body>
 </html>
