--- a/controls/index.html
+++ b/controls/index.html
@@ -20,7 +20,7 @@
         padding: 1em;
         margin: 0 auto;
       }
-      button {
+      .controller button {
         font: 40px Helvetica, Arial;
         width: 3em;
         height: 3em;
@@ -31,6 +31,26 @@
         height: 200px;
       }
       input {
+        font: 40px Helvetica, Arial;
+        width: 100%;
+        height: 100px;
+        margin-bottom: 1em;
+      }
+      .submit {
+        font: 40px Helvetica, Arial;
+        width: 100%;
+        height: 100px;
+        margin-bottom: 1em;
+      }
+
+      .prettyButton {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
         font: 40px Helvetica, Arial;
         width: 100%;
         height: 100px;
@@ -64,7 +84,10 @@
     </style>
   </head>
   <body>
-    <input type="text" id="name" placeholder="Name"/>
+    <form onSubmit="handleSubmitForm(event);">
+      <input type="text" required id="name" placeholder="Name"/>
+      <button class="submit">Join</buton>
+    </form>
     <div class="controller">
       <button id="up">⬆️</button>
       <button id="left">⬅️</button>
